# Streamlit

./: README.md  main.py  pyproject.toml  requirements.txt
data/: location_rules.csv  unique_locations.csv  zone_info.csv
