[project]
name = "my-streamlit-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "numpy>=2.3.5",
    "panda>=0.3.1",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.2",
    "streamlit>=0.1.0",
    "streamlit-folium>=0.25.3",
    "xgboost>=3.1.2",
]
